Fix contentEditable not working on Safari

--- a/src/components/Item.scss
+++ b/src/components/Item.scss
@@ -65,6 +65,10 @@
     text-overflow: ellipsis;
     margin-top: -2px;
 
+    // Fix contenteditable not working on Safari
+    -webkit-user-select: text;
+    user-select: text;
+
     &:focus {
       outline: 0;
       text-overflow: none;
